# retail-analytics

./: Makefile  README-instructions.md  README-template.md  README.md  finish-microsite.sh
.github/scripts/: collect_metrics.py
.github/workflows/: collect_metrics.yaml
docs/: _config.yml  about.markdown  contributing.markdown  index.markdown
docs/_layouts/: default.html
iac/aws/iac/: app.py  cdk.json  pyproject.toml  regional_stack.py  root_env_stack.py
iac/aws/iac/access_stack/: access_stack.py
iac/aws/iac/analytics_stack/: analytics_stack.py
iac/aws/iac/config/: bucket_attributes.py
iac/aws/iac/datalake_stack/: datalake_stack.py
iac/aws/iac/scratch_stack/: scratch_stack.py
src/ddl/: retail_decision_demo.ddl
src/scripts/: load_s3.sh
src/src/: retail_analytics_server.py
